--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -39,10 +39,6 @@ video {
   vertical-align: middle;
 }
 
-/* ====================================
-// base rules
-// ==================================== */
-
 .row + .row {
   margin-top: 16px;
 }
@@ -55,22 +51,26 @@ video {
   border: 1px solid rgba(86, 61, 124, 0.2);
 }
 
-.headline-cards {
-  width: 1110px;
-  height: 555px;
-  margin-bottom: 41px;
-}
+// .headline-cards {
+//   width: 1110px;
+//   height: 555px;
+//   margin-bottom: 41px;
+// }
 
-.col-lg-6,
-.highlights-cards {
-  width: 540px;
-  height: 215px;
-  margin-bottom: 41px;
-}
+// .col-lg-6,
+// .highlights-cards {
+//   width: 540px;
+//   height: 215px;
+//   margin-bottom: 41px;
+// }
 
-.col-lg-4,
-.cluster-cards {
-  width: 350px;
-  height: 197px;
-  margin-bottom: 41px;
-}
+// .col-lg-4,
+// .cluster-cards {
+//   width: 350px;
+//   height: 197px;
+//   margin-bottom: 41px;
+// }
+
+/* ====================================
+// base rules
+// ==================================== */
