--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,5 @@
 @import "base";
 @import "layout";
-@import "modules/example";
 @import "modules/card";
+@import "modules/category";
+@import "modules/title";
