--- a/src/scss/modules/_card.scss
+++ b/src/scss/modules/_card.scss
@@ -1,4 +1,4 @@
-.card-1 {
+.card-highlight {
   background-color: #fff;
   color: #222;
   display: flex;
@@ -9,12 +9,40 @@
   background-image: url("../img/overlay.png");
 }
 
+.card-headline {
+  background-color: #fff;
+  //   max-height: 200px;
+  //   max-width: 350px;
+  padding: 38px;
+  color: #222;
+  background-image: url("../img/headline-international.png");
+}
+
+.card-headline h1 {
+  color: var(--white, #fff);
+  font-family: Open Sans;
+  font-size: 38px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding-top: 200px;
+  padding-left: 20px;
+}
+.card-headline h2 {
+  color: var(--white, #fff);
+  font-family: Open Sans;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-right: 410px;
+}
+
 .card-cluster {
   background-color: #fff;
-  max-height: 200px;
-  max-width: 350px;
+  //   max-height: 200px;
+  //   max-width: 350px;
   padding: 10px;
-  color: white;
   color: #222;
 }
 
@@ -47,20 +75,6 @@
   object-fit: cover;
 }
 
-.category-international {
-  //   background-color: #fff;
-  display: inline-block;
-  padding: 0.25em 0;
-  background: #white;
-  color: #ffffff;
-  padding: 10px;
-
-  font-size: 16px;
-  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
-  text-transform: uppercase;
-  color: #f40f97;
-}
-
 .article-title {
   font-size: 16px;
 }
@@ -75,4 +89,5 @@
 .noun {
   color: #999999;
   font-size: 12px;
+  margin-top: 25px;
 }
