--- a/src/scss/modules/_category.scss
+++ b/src/scss/modules/_category.scss
@@ -1,5 +1,31 @@
-.category {
+.category-swiss p {
+  color: red;
 }
 
-.category-international {
+.category-international p {
+  color: #f40f97;
 }
+
+.category-economy p {
+  color: #yellow;
+}
+.category {
+  display: inline-block;
+  padding: 0.25em 0;
+  background: #white;
+  padding: 10px;
+  font-size: 16px;
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
+  text-transform: uppercase;
+}
+
+//   background-color: #fff;
+//   display: inline-block;
+//   padding: 0.25em 0;
+//   background: #white;
+//   color: #ffffff;
+//   padding: 10px;
+
+//   font-size: 16px;
+//   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
+//   text-transform: uppercase;
