--- a/src/scss/modules/_title.scss
+++ b/src/scss/modules/_title.scss
@@ -1,3 +1,30 @@
-.title-container {
-  max-width: 236px;
+.title-article {
+  font-size: 16px;
+}
+
+.title-cluster-size {
+  margin-right: 650px;
+}
+
+.title-highlight {
+  padding: 0;
+  margin-top: 20px;
+}
+
+.color-swiss {
+  background-color: #e41e13;
+  padding: 10px;
+  display: inline-block;
+}
+
+.color-international {
+  background-color: #f40f97;
+  padding: 10px;
+  display: inline-block;
+}
+
+.color-economy {
+  background-color: #c9af00;
+  padding: 10px;
+  display: inline-block;
 }
