--- a/src/scss/modules/_card.scss
+++ b/src/scss/modules/_card.scss
@@ -6,44 +6,114 @@
   justify-content: space-between;
   padding: 20px;
   position: relative;
-  background-image: url("../img/overlay.png");
+  //   background-image: url("../img/overlay.png");
 }
 
-.card-headline {
-  background-color: #fff;
-  //   max-height: 200px;
-  //   max-width: 350px;
-  padding: 38px;
-  color: #222;
-  background-image: url("../img/headline-international.png");
+// .card-headline {
+//   background-color: #fff;
+//   //   max-height: 200px;
+//   //   max-width: 350px;
+//   padding: 38px;
+//   background-image: url("../img/headline-international.png");
+// }
+
+// .card-img-economy {
+//   background-image: url("../img/headline-economie.png");
+//   background-repeat: no-repeat;
+//   width: 100%;
+//   height: 100%;
+//   object-fit: cover;
+//   //   padding: 38px;
+// }
+
+// .card-img-swiss {
+//   background-image: url("../img/headline-suisse.png");
+//   background-repeat: no-repeat;
+//   padding: 38px;
+// }
+
+.article-container {
+  position: relative;
 }
 
-.card-headline h1 {
-  color: var(--white, #fff);
-  font-family: Open Sans;
+.article-content {
+  position: absolute;
+  bottom: 0;
+  color: #fff;
+  left: 50px;
+}
+
+@media only screen and (max-width: 767px) {
+  .article-content {
+    height: 100px;
+    position: relative;
+    bottom: auto;
+    left: auto;
+    margin-top: 20px;
+  }
+}
+
+.article-content h1 {
+  font-family: "Open Sans";
   font-size: 38px;
   font-style: normal;
   font-weight: 700;
-  line-height: normal;
-  padding-top: 200px;
+  line-height: 50px;
+
   padding-left: 20px;
 }
-.card-headline h2 {
-  color: var(--white, #fff);
-  font-family: Open Sans;
+
+.article-content h2 {
+  font-family: "Open Sans";
   font-size: 28px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin-right: 410px;
+  //   margin-right: 410px;
+  padding-right: 400px;
+}
+
+@media only screen and (max-width: 767px) {
+  .article-content {
+    position: relative; /* Change the positioning for smaller screens */
+    bottom: auto;
+    left: auto;
+    margin-top: 20px; /* Add some top margin for spacing */
+  }
+
+  .article-content h1 {
+    font-size: 28px; /* Adjust font size for h1 on smaller screens */
+    line-height: 40px; /* Adjust line height for h1 on smaller screens */
+    padding-left: 10px; /* Adjust padding for h1 on smaller screens */
+  }
+
+  .article-content h2 {
+    font-size: 24px; /* Adjust font size for h2 on smaller screens */
+    line-height: normal; /* Reset line height for h2 on smaller screens */
+    padding-right: 10px; /* Adjust padding for h2 on smaller screens */
+  }
 }
 
 .card-cluster {
   background-color: #fff;
-  //   max-height: 200px;
-  //   max-width: 350px;
-  padding: 10px;
+  height: 116px;
   color: #222;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 20px;
+  padding-top: 23px;
+  padding-bottom: 150px;
+  position: relative;
+}
+.card-cluster h2 {
+  color: #222;
+  font-family: "Open Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding-bottom: 30px;
 }
 
 // .card-highlight {
@@ -75,10 +145,6 @@
   object-fit: cover;
 }
 
-.article-title {
-  font-size: 16px;
-}
-
 .icon {
   position: absolute;
   bottom: 38px;
@@ -89,5 +155,5 @@
 .noun {
   color: #999999;
   font-size: 12px;
-  margin-top: 25px;
+  margin-top: 30px;
 }
