--- a/src/scss/modules/_category.scss
+++ b/src/scss/modules/_category.scss
@@ -1,22 +1,59 @@
 .category-swiss p {
   color: red;
+  margin: 0;
 }
 
 .category-international p {
   color: #f40f97;
+  margin: 0;
 }
 
 .category-economy p {
-  color: #yellow;
+  color: #c9af00;
+  margin: 0;
 }
-.category {
+
+.category p {
+  background-color: #fff;
   display: inline-block;
-  padding: 0.25em 0;
-  background: #white;
   padding: 10px;
   font-size: 16px;
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
   text-transform: uppercase;
+  margin-top: 200px;
+}
+
+.category-swiss-2 p {
+  background-color: #fff;
+  display: inline-block;
+  padding: 10px;
+  font-size: 16px;
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
+  text-transform: uppercase;
+  margin-top: 10px;
+  color: #e41e13;
+}
+
+.category-international-2 p {
+  background-color: #fff;
+  display: inline-block;
+  padding: 10px;
+  font-size: 16px;
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
+  text-transform: uppercase;
+  margin-top: 10px;
+  color: #f40f97;
+}
+
+.category-economy-2 p {
+  background-color: #fff;
+  display: inline-block;
+  padding: 10px;
+  font-size: 16px;
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
+  text-transform: uppercase;
+  margin-top: 10px;
+  color: #c9af00;
 }
 
 //   background-color: #fff;
